<resources>
    <string name="app_name">MyWordPress</string>
    <string name="seek_categories">Seeking......</string>
    <string name="seek_posts">Seeking Posts.....</string>
    <string name="recent_posts">Recent</string>
    <string name="failed_load_posts">Failed loading posts,check your network.</string>
    <string name="retry">Retry</string>
    <string name="error_load_categories">Error load categories.</string>
    <string name="menu_search">Search</string>
    <string name="search_hint">Please enter your search here</string>
    <string name="search_result">Search Result for</string>
    <string name="edit_post">Edit</string>
    <string name="share_post">Share</string>
    <string name="delete_this_post">Delete</string>
    <string name="add_post">Write a Post</string>
    <string name="tickertext">Hello world</string>
    <string name="title">Title:</string>
    <string name="title_hint">Input your title here</string>
    <string name="write_a_post">Write a Post</string>
    <string name="author">Author:</string>
    <string name="content">Content:</string>
    <string name="content_hint">Input your content here</string>
    <string name="author_hint">Author</string>
    <string name="choose_a_category">Category:</string>
    <string name="all_clear">Clear All</string>
    <string name="commit">Commit!</string>
    <string name="all_clear_confirm">Are you sure to clear all text?</string>
    <string name="yes">Yes</string>
    <string name="No">No</string>
    <string name="success">Success!</string>
    <string name="delete_post_confirm">Are you sure to delete this post?</string>
    <string name="calculator">Calculator</string>
    <string name="calculator_hint">Input the formula here</string>
    <string name="cal">Calculate!</string>
    <string name="wrong_input">Wrong Input!</string>
</resources>
