<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app = "http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/search_menu_item_search_action"
        app:actionViewClass = "android.widget.SearchView"
        android:icon = "@drawable/ic_search"
        app:showAsAction = "collapseActionView|ifRoom"
        android:title="@string/menu_search"/>
    <item
        android:id="@+id/search_menu_item_add_action"
        android:icon="@drawable/ic_add_black_24dp"
        app:showAsAction = "collapseActionView"
        android:title="@string/add_post"/>
    <item
        android:id="@+id/search_menu_item_calculator"
        android:icon="@drawable/calculator"
        app:showAsAction="collapseActionView"
        android:title="@string/calculator"/>


</menu>