<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                 xmlns:tools="http://schemas.android.com/tools"
                                                 xmlns:app="http://schemas.android.com/apk/res-auto"
                                                 android:layout_width="match_parent"
                                                 android:layout_height="match_parent"
                                                 tools:context = ".control.postedit.PostEditFragment"
                                                 android:id= "@+id/post_edit_coordinatorLayout">
    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height = "wrap_content"
        android:fitsSystemWindows="true"
        android:id="@+id/post_edit_AppBarLayout"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        >
        <android.support.v7.widget.Toolbar
            android:id="@+id/post_edit_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:layout_scrollFlags="scroll|enterAlways"
            />
        <android.support.design.widget.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:fitsSystemWindows="true"
            android:layout_height="match_parent"
            android:title="@string/add_post"
            app:expandedTitleMarginEnd="100dp"
            app:expandedTitleMarginStart="20dp"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">
            <ImageView
                android:alpha="0.5"
                android:src="@drawable/writepaper"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:scaleType="centerCrop"
                android:fitsSystemWindows="true"
                app:layout_scrollFlags = "scroll|enterAlways"
                app:layout_collapseMode="parallax"
                />

        </android.support.design.widget.CollapsingToolbarLayout>


    </android.support.design.widget.AppBarLayout>
    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:scrollbarStyle="insideInset"
        android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        app:layout_behavior = "@string/appbar_scrolling_view_behavior"
        android:layout_height="wrap_content">
        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/edittext_title"
            android:layout_width="300dp"
            android:layout_height="match_parent"
            android:hint="@string/title_hint"
            android:singleLine="true"
            app:met_baseColor="@color/RedText"
            app:met_primaryColor="@color/MainColor"
            app:met_maxCharacters="32"
            app:met_floatingLabel="highlight"
            app:met_floatingLabelText="@string/title"
            />
        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/edittext_author"
            android:layout_width="300dp"
            android:layout_height="match_parent"
            android:hint="@string/author_hint"
            android:singleLine="true"
            app:met_baseColor="@color/seagreen"
            app:met_primaryColor="@color/lightdark"
            app:met_maxCharacters="32"
            app:met_floatingLabel="highlight"
            app:met_floatingLabelText="@string/author"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:text="@string/choose_a_category"
                android:textStyle="italic"
                android:textSize="20sp"
                android:layout_height="match_parent"/>

            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/spinner"/>
        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_gravity="start"
            android:text="@string/content"
            android:layout_marginTop="10dp"
            android:textSize="22sp"
            android:textStyle="bold"
            android:layout_height="wrap_content"/>
        <com.rengwuxian.materialedittext.MaterialEditText
            android:layout_width="match_parent"
            android:id="@+id/post_edit_content"
            android:hint="@string/content_hint"
            app:met_maxCharacters="500"
            app:met_baseColor="@color/MainColorDark"
            app:met_primaryColor="@color/Lightpink"
            android:layout_height="wrap_content"/>
        <Button
            android:layout_width="wrap_content"
            android:text="@string/commit"
            android:id="@+id/commit_button"
            android:layout_height="wrap_content"/>


    </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>