<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical"
              android:theme="@style/Sui.Theme"
              android:layout_width="match_parent"
              android:id="@+id/calculator_lineaylayout"
              android:layout_height="match_parent">
    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:id="@+id/calculator_toolbar"
        android:title="@string/calculator"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:background="@color/MainColorDark"
        android:layout_height="?attr/actionBarSize"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_gravity="start"
        android:text="Calculating:"
        android:layout_marginTop="10dp"
        android:textSize="22sp"
        android:textStyle="bold"
        android:layout_height="wrap_content"/>
    <com.rengwuxian.materialedittext.MaterialEditText
        android:layout_width="match_parent"
        android:id="@+id/calculator_inputtext"
        android:hint="@string/calculator_hint"
        app:met_baseColor="@color/RedText"
        android:singleLine="true"
        android:layout_height="wrap_content"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/calculator_cal"
            style="@style/Widget.AppCompat.Button.Colored"
            android:text="@string/cal"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:id="@+id/calculator_clear"
            style="@style/Base.Widget.AppCompat.Button.Colored"
            android:text="@string/all_clear"/>
    </LinearLayout>
    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:textSize="15sp"
        android:id="@+id/calculator_textshow"
    />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:layout_gravity="center"
        android:text="Result in:"
        android:textStyle="italic"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="40sp"
        android:textColor="@color/orange"
        android:id="@+id/result_calculator"
        android:layout_gravity="center"/>


</LinearLayout>